copyright content fixed

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -27,4 +27,4 @@
 - id: all
   translation: All
 - id: copyright
-  translation: copyright &copy; 2019 [gethugothemes](https://gethugothemes.com) all right reserved
+  translation: copyright &copy; 2020 Kepler Lab - Publicis.Sapient all right reserved
